--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -87,27 +87,27 @@
 
                                 <div class="dropdown">
                                     <a class="dropdown-toggle text-decoration-none" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Month
+                                        Projects List
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="#">January</a></li>
-                                        <li><a class="dropdown-item" href="#">February</a></li>
-                                        <li><a class="dropdown-item" href="#">March</a></li>
-                                        <li><a class="dropdown-item" href="#">April</a></li>
-                                        <li><a class="dropdown-item" href="#">May</a></li>
-                                        <li><a class="dropdown-item" href="#">June</a></li>
-                                        <li><a class="dropdown-item" href="#">July</a></li>
-                                        <li><a class="dropdown-item" href="#">August</a></li>
-                                        <li><a class="dropdown-item" href="#">September</a></li>
-                                        <li><a class="dropdown-item" href="#">October</a></li>
-                                        <li><a class="dropdown-item" href="#">November</a></li>
-                                        <li><a class="dropdown-item" href="#">December</a></li>
+                                        <li><a class="dropdown-item" href="#">Project 1</a></li>
+                                        <li><a class="dropdown-item" href="#">Project 2</a></li>
+                                        <li><a class="dropdown-item" href="#">Project 3</a></li>
+                                        <li><a class="dropdown-item" href="#">Project 4</a></li>
+                                        <li><a class="dropdown-item" href="#">Project 5</a></li>
+                                        <li><a class="dropdown-item" href="#">Project 6</a></li>
+                                        <li><a class="dropdown-item" href="#">Project 7</a></li>
+                                        <li><a class="dropdown-item" href="#">Project 8</a></li>
+                                        <li><a class="dropdown-item" href="#">Project 9</a></li>
+                                        <li><a class="dropdown-item" href="#">Project 10</a></li>
+                                        <li><a class="dropdown-item" href="#">Project 11</a></li>
+                                        <li><a class="dropdown-item" href="#">Project 12</a></li>
                                     </ul>
                                 </div>
                             </div>
 
                             <div class="bar-chart-con">
-                                <canvas id="man-month-chart"></canvas>
+                                <canvas id="man-month-chart" height="500"></canvas>
                             </div>
                         </div>
                     </div>
@@ -216,7 +216,6 @@
 
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
-<script src="/js/forprogresscircleiguess.js"></script>
 
 <!-- sort (department, project), form validation and search bar behavior are all here -->
 <script src="/js/custome.js"></script>
@@ -227,23 +226,43 @@
          $(document).ready(function () {
              $("#spinner").hide();
 
-             //monthly man-month chart
-             const mm_ctx = new Chart(document.getElementById("#man-month-chart"),mmconfig);
+             // Dummy data
+             const months = ["January", "February", "March", "April", "May", "June", "July", "August", "September",
+                 "October", "November", "December"];
+             const actualData = [50, 60, 75, 80, 70, 90, 85, 80, 75, 70, 65, 60];
+             const targetData = [60, 65, 70, 75, 80, 85, 90, 95, 100, 100, 100, 100];
 
-             const mmconfig = {
-                 type: 'bar',
+             // Get the chart canvas
+             const ctx = document.getElementById("man-month-chart").getContext('2d');
+
+             // Create the line chart
+             const lineChart = new Chart(ctx, {
+                 type: 'line',
                  data: {
-                     labels: ['A', 'B', 'C'],
+                     labels: months,
                      datasets: [{
-                         label: 'Easy as',
-                         data: [1, 2, 3],
-                     }],
+                         label: 'Actual Productivity',
+                         data: actualData,
+                         borderColor: 'blue',
+                         fill: false
+                     }, {
+                         label: 'Target Productivity',
+                         data: targetData,
+                         borderColor: 'green',
+                         fill: false
+                     }]
                  },
                  options: {
-                     indexAxis: 'y', // <-- here
-                     responsive: true
+                     responsive: true,
+                     maintainAspectRatio: false,
+                     scales: {
+                         y: {
+                             beginAtZero: true,
+                             max: 100 // Set the maximum value on the Y-axis
+                         }
+                     }
                  }
-             }
+             });
 
 
              getData("/api/user/count", function (error,data) {
@@ -252,6 +271,7 @@
                          error
                      )
                  } else {
+                     console.log(data);
                         $("#spinner").hide();
                         $("#employeeCount").text(data);
                  }
